--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,9 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="11"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher"
+                 android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="HomeActivity"
                   android:label="@string/app_name">
             <intent-filter>
