--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,9 +6,10 @@
     <uses-sdk android:minSdkVersion="11"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
+                 android:icon="@drawable/ic_maple_leaf"
                  android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="HomeActivity"
+                  android:configChanges="orientation|screenSize"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
